fix footer fix show menu on mobile

--- a/src/GovITHub.Auth.Identity/wwwroot/less/index.less
+++ b/src/GovITHub.Auth.Identity/wwwroot/less/index.less
@@ -196,9 +196,18 @@ input.input-validation-error {
     padding-bottom: 0px;
     padding-top: 10px;
 
+   .navbar-nav > li > a {
+        color: rgb(0, 77, 243);
+        font-weight: bold;
+    }
+
     a {
         color: rgb(0, 77, 243);
         font-weight: bold;
+    }
+
+    .navbar-nav {
+        background-color: white;
     }
 }
 
@@ -294,6 +303,7 @@ input.input-validation-error {
             padding-left: 20px;
             padding-right: 10px;
         }
+
         .col-md-4 {
             padding-left: 0px;
         }
